--- a/apps/web/src/scenes/NotFound/NotFound.module.css
+++ b/apps/web/src/scenes/NotFound/NotFound.module.css
@@ -1,5 +1,16 @@
 .wrap {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(106, 90, 205, 0.9);
+    color: white;
+    border-radius: 4px;
+    padding: 24px;
     width: 100%;
     height: 100%;
     margin: 0 24px;
+}
+.wrap h1 {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 0;
 }
