--- a/apps/web/src/components/App/App.module.scss
+++ b/apps/web/src/components/App/App.module.scss
@@ -2,7 +2,13 @@
     width: 100%;
     height: 100%;
     margin: 24px auto 0;
+    
     @media screen and (min-width: 768px) {
+        width: calc(100% - 48px);
+        max-width: calc(100% - 48px);
+    }
+
+    @media screen and (min-width: 1100px) {
         width: 1100px;
         max-width: 1100px;   
     }
