--- a/apps/web/src/components/App/App.module.scss
+++ b/apps/web/src/components/App/App.module.scss
@@ -1,7 +1,7 @@
 .wrap {
     width: 100%;
     height: 100%;
-    margin: 24px auto 0;
+    margin: 0 auto;
     
     @media screen and (min-width: 768px) {
         width: calc(100% - 48px);
