--- a/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
+++ b/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
@@ -10,10 +10,14 @@ button {
 .DropdownMenuContent,
 .DropdownMenuSubContent {
   min-width: 220px;
-  background-color: white;
-  border-radius: 6px;
-  padding: 5px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  /* padding: 5px; */
+  margin-top: 4px;
+  margin-right: -4px;
   box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+  
+  /* Animation */
   animation-duration: 400ms;
   animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
   will-change: transform, opacity;
@@ -40,22 +44,18 @@ button {
 .DropdownMenuRadioItem,
 .DropdownMenuSubTrigger {
   line-height: 1;
-  font-size: 13px;
-  color: slateblue;
-  border-radius: 3px;
+  font-size: 1rem;
   display: flex;
   align-items: center;
-  height: 25px;
-  padding: 0 5px;
   position: relative;
-  padding: 12px 0;
-  padding-left: 6px;
+  padding: 12px 12px;
   user-select: none;
   outline: none;
   cursor: pointer;
 }
 .DropdownMenuSubTrigger[data-state='open'] {
   background-color: var(--violet-4);
+  background-color: black;
   color: var(--violet-11);
 }
 .DropdownMenuItem[data-disabled],
@@ -80,12 +80,6 @@ button {
   color: var(--mauve11);
 }
 
-.DropdownMenuSeparator {
-  height: 1px;
-  background-color: var(--violet-6);
-  margin: 5px;
-}
-
 .DropdownMenuItemIndicator {
   position: absolute;
   left: 0;
@@ -101,7 +95,7 @@ button {
 
 .IconButton {
   font-family: inherit;
-  border-radius: 100%;
+  border-radius: 4px;
   height: 35px;
   width: 35px;
   display: inline-flex;
@@ -111,12 +105,11 @@ button {
   background-color: white;
   box-shadow: 0 2px 10px var(--blackA7);
 }
-.IconButton:hover {
-  background-color: var(--violet-3);
-  cursor: pointer;
-}
+
+.IconButton:hover,
 .IconButton:focus {
-  box-shadow: 0 0 0 2px rgba(22, 23, 24, 0.2);
+  background-color: rgba(133, 133, 133, 0.1);
+  cursor: pointer;
 }
 
 .RightSlot {
