feat(apps/web): update style of landing page

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
