feat: add user email address to Header nav

--- a/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
+++ b/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
@@ -46,7 +46,12 @@ button {
   user-select: none;
   outline: none;
   cursor: pointer;
+
+  &.pt-0 {
+    padding-top: 0;
+  }
 }
+
 .DropdownMenuSubTrigger[data-state="open"] {
   background-color: var(--violet-4);
   background-color: black;
