--- a/apps/web/src/scenes/NotFound/NotFound.module.css
+++ b/apps/web/src/scenes/NotFound/NotFound.module.css
@@ -1,16 +1,9 @@
 .wrap {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  background-color: rgba(106, 90, 205, 0.9);
   color: white;
-  border-radius: 4px;
-  padding: 24px;
   width: 100%;
   margin: 0 24px;
-}
-
-.wrap h1 {
-  font-size: 48px;
-  font-weight: 700;
-  margin: 0;
+  max-height: 300px;
 }
