--- a/packages/ui/Input/Input.module.css
+++ b/packages/ui/Input/Input.module.css
@@ -6,12 +6,13 @@
 }
 
 .errorText {
-  color: #B00020;
+  color: #b00020;
   font-size: 14px;
   margin-top: 4px;
 }
 
 .label {
+  color: white;
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 8px;
