--- a/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
+++ b/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
@@ -1,7 +1,3 @@
-@import "@radix-ui/colors/black-alpha.css";
-@import "@radix-ui/colors/mauve.css";
-@import "@radix-ui/colors/violet.css";
-
 /* reset */
 button {
   all: unset;
@@ -9,7 +5,7 @@ button {
 
 .DropdownMenuContent,
 .DropdownMenuSubContent {
-  @apply bg-primary-content text-primary mt-1 mr-[-4px] rounded-sm min-w-[200px] shadow-lg;
+  @apply bg-white text-primary mt-1 mr-[-4px] rounded-md min-w-[200px] shadow-lg;
 
   /* Animation */
   animation-duration: 400ms;
@@ -37,15 +33,10 @@ button {
 .DropdownMenuCheckboxItem,
 .DropdownMenuRadioItem,
 .DropdownMenuSubTrigger {
+  @apply relative flex items-center last:rounded-b-md p-[12px] cursor-pointer;
   line-height: 1;
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  position: relative;
-  padding: 12px 12px;
   user-select: none;
   outline: none;
-  cursor: pointer;
 
   &.pt-0 {
     padding-top: 0;
@@ -53,30 +44,28 @@ button {
 }
 
 .DropdownMenuSubTrigger[data-state="open"] {
-  background-color: var(--violet-4);
   background-color: black;
-  color: var(--violet-11);
+  color: white;
 }
 .DropdownMenuItem[data-disabled],
 .DropdownMenuCheckboxItem[data-disabled],
 .DropdownMenuRadioItem[data-disabled],
 .DropdownMenuSubTrigger[data-disabled] {
-  color: var(--mauve8);
+  color: black;
   pointer-events: none;
 }
 .DropdownMenuItem[data-highlighted],
 .DropdownMenuCheckboxItem[data-highlighted],
 .DropdownMenuRadioItem[data-highlighted],
 .DropdownMenuSubTrigger[data-highlighted] {
-  background-color: var(--violet-9);
-  color: var(--violet-1);
+  @apply bg-primary-content text-primary;
 }
 
 .DropdownMenuLabel {
   padding-left: 25px;
   font-size: 12px;
   line-height: 25px;
-  color: var(--mauve11);
+  color: black;
 }
 
 .DropdownMenuItemIndicator {
@@ -96,8 +85,7 @@ button {
   @apply flex 
     items-center 
     justify-center
-    text-primary-focus
-    bg-primary-content
+    text-primary
     font-sans 
     rounded-md 
     h-9 
@@ -108,13 +96,13 @@ button {
 .RightSlot {
   margin-left: auto;
   padding-left: 20px;
-  color: var(--mauve11);
+  color: black;
 }
 [data-highlighted] > .RightSlot {
   color: white;
 }
 [data-disabled] .RightSlot {
-  color: var(--mauve8);
+  color: black;
 }
 
 @keyframes slideUpAndFade {
