--- a/apps/web/src/components/AuthenticationWrap/AuthWrap.module.css
+++ b/apps/web/src/components/AuthenticationWrap/AuthWrap.module.css
@@ -11,7 +11,7 @@
   width: var(--auth-wrap-size-small);
   max-width: var(--auth-wrap-size-small);
 
-  @media and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     height: var(--auth-wrap-size-medium);
     width: var(--auth-wrap-size-medium);
     max-width: var(--auth-wrap-size-medium);
