feat(apps/web): add top nav icons

--- a/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
+++ b/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
@@ -81,7 +81,7 @@ button {
   @apply flex 
     items-center 
     justify-center
-    text-primary
+    text-black
     font-sans 
     rounded-md 
     h-9 
