feat(app/web): highlight nav icon for route

--- a/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
+++ b/apps/web/src/components/App/components/Header/AuthNavMenu/styles.css
@@ -54,7 +54,7 @@ button {
 .DropdownMenuCheckboxItem[data-highlighted],
 .DropdownMenuRadioItem[data-highlighted],
 .DropdownMenuSubTrigger[data-highlighted] {
-  @apply bg-primary-content text-primary;
+  @apply bg-blue-100 text-primary;
 }
 
 .DropdownMenuLabel {
