feat: update todo app

--- a/apps/playground/app/app.css
+++ b/apps/playground/app/app.css
@@ -13,6 +13,10 @@
 
 	/* Royal Blue */
 	--primary: rgba(0, 0, 128, 0.8);
+	--primary-foreground: rgba(255, 255, 255, 1);
+
+	--background: oklch(0.985 0.002 247.839);
+	--foreground: oklch(0.13 0.028 261.692);
 
 	/* Custom olive color palette */
 	--color-olive-50: #f7f8f5;
